--- a/gradle.properties
+++ b/gradle.properties
@@ -23,25 +23,25 @@ VERSION_CODE=10
 
 POM_GROUP_ID=com.lz.easyhttp
 POM_DESCRIPTION=Genius Lib For Android
-POM_URL=https://github.com/liuyu827/EasyHttp
-POM_SCM_URL=https://github.com/liuyu827/EasyHttp
-POM_SCM_CONNECTION=scm:git@github.com:liuyu827/EasyHttp.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:liuyu827/EasyHttp.git
+POM_URL=https://github.com/LewisLZ/EasyHttp
+POM_SCM_URL=https://github.com/LewisLZ/EasyHttp
+POM_SCM_CONNECTION=scm:git@github.com:LewisLZ/EasyHttp.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:LewisLZ/EasyHttp.git
 POM_LICENCE_COMMENTS=A business-friendly OSS license
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=lz
-POM_DEVELOPER_NAME=liuyu
-POM_DEVELOPER_EMAIL=445873488@qq.com
+POM_DEVELOPER_NAME=lewislz
+POM_DEVELOPER_EMAIL=Lewis.L.Yue@gmail.com
 POM_DEVELOPER_URL=http://www.qiujuer.net
 POM_ISSUE_MANAGEMENT_SYSTEM=Github
-POM_ISSUE_MANAGEMENT_URL=https://github.com/liuyu827/EasyHttp/issues
+POM_ISSUE_MANAGEMENT_URL=https://github.com/LewisLZ/EasyHttp/issues
 POM_INCEPTION_YEAR=2016
 POM_BINTRAY_PRPO=maven
 POM_PACKAGING=aar
-POM_NAME=easy
-POM_GIT_URL=https://github.com/liuyu827/EasyHttp.git
+POM_NAME=easyhttp
+POM_GIT_URL=https://github.com/LewisLZ/EasyHttp.git
 POM_LICENCE_ALL=["Apache-2.0"]
 
 ANDROID_BUILD_MIN_SDK_VERSION=15
