--- a/gradle.properties
+++ b/gradle.properties
@@ -18,10 +18,10 @@
 # org.gradle.parallel=true
 
 
-VERSION_NAME=0.1.0
-VERSION_CODE=10
+VERSION_NAME=0.1.1
+VERSION_CODE=11
 
-POM_GROUP_ID=com.lz.easyhttp
+POM_GROUP_ID=com.lewis.magicalhttp
 POM_DESCRIPTION=Genius Lib For Android
 POM_URL=https://github.com/LewisLZ/EasyHttp
 POM_SCM_URL=https://github.com/LewisLZ/EasyHttp
@@ -40,7 +40,7 @@ POM_ISSUE_MANAGEMENT_URL=https://github.com/LewisLZ/EasyHttp/issues
 POM_INCEPTION_YEAR=2016
 POM_BINTRAY_PRPO=maven
 POM_PACKAGING=aar
-POM_NAME=easyhttp
+POM_NAME=magicalhttp
 POM_GIT_URL=https://github.com/LewisLZ/EasyHttp.git
 POM_LICENCE_ALL=["Apache-2.0"]
 
@@ -54,4 +54,4 @@ android.useDeprecatedNdk=true
 
 UI_VERSION_NAME=0.0.1
 UI_VERSION_CODE=1
-POM_UI_GROUP_ID=com.lz.easyui
+POM_UI_GROUP_ID=com.lewis.easyui
