--- a/magicalhttp/build.gradle
+++ b/magicalhttp/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.3.0'
     }
 }
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
+apply plugin: 'maven'
 
 repositories {
     jcenter()
@@ -17,16 +18,13 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.lz.easyhttp.samples"
-        minSdkVersion 15
+        minSdkVersion 14
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
     }
 
 //    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_6
-//        targetCompatibility JavaVersion.VERSION_1_6
+//        sourceCompatibility JavaVersion.VERSION_1_7
+//        targetCompatibility JavaVersion.VERSION_1_7
 //    }
     buildTypes {
         release {
@@ -38,7 +36,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.0.0-alpha2'
-    compile project(':magicalhttp')
-//    compile 'com.lz.easyhttp:EasyHttp:0.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.liulishuo.filedownloader:library:0.3.0'
 }
+
+
+apply from: '../gradle-push.gradle'
