--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@
 VERSION_NAME=0.1.1
 VERSION_CODE=11
 
-POM_GROUP_ID=com.lewis.magicalhttp
+POM_GROUP_ID=com.lewis.easyhttp
 POM_DESCRIPTION=Genius Lib For Android
 POM_URL=https://github.com/LewisLZ/EasyHttp
 POM_SCM_URL=https://github.com/LewisLZ/EasyHttp
@@ -31,7 +31,7 @@ POM_LICENCE_COMMENTS=A business-friendly OSS license
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=lz
+POM_DEVELOPER_ID=lewis
 POM_DEVELOPER_NAME=lewislz
 POM_DEVELOPER_EMAIL=Lewis.L.Yue@gmail.com
 POM_DEVELOPER_URL=http://www.qiujuer.net
@@ -40,7 +40,7 @@ POM_ISSUE_MANAGEMENT_URL=https://github.com/LewisLZ/EasyHttp/issues
 POM_INCEPTION_YEAR=2016
 POM_BINTRAY_PRPO=maven
 POM_PACKAGING=aar
-POM_NAME=magicalhttp
+POM_NAME=lewishttp
 POM_GIT_URL=https://github.com/LewisLZ/EasyHttp.git
 POM_LICENCE_ALL=["Apache-2.0"]
 
