--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lewis.magicalhttp.samples" >
+    package="com.lewis.easyhttp.samples" >
 
     <application
-        android:name="com.lewis.magicalhttp.samples.MyApplication"
+        android:name="com.lewis.easyhttp.samples.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.lewis.magicalhttp.samples.MainActivity"
+            android:name="com.lewis.easyhttp.samples.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
